syntax = "proto3";

// Опции генерации Java-кода.
option java_multiple_files = true;
option java_package = "ru.yandex.practicum.grpc.recommendation";

// Определение пакета протокола.
package recommendations;

// -----------------------------------------------------------------------------
// Запрос для получения персонализированных рекомендаций пользователя.
// -----------------------------------------------------------------------------
message UserPredictionsRequestProto {
  // Идентификатор пользователя.
  int32 user_id = 1;

  // Максимальное количество возвращаемых результатов.
  int32 max_results = 2;
}

// -----------------------------------------------------------------------------
// Запрос для получения списка событий, похожих на заданное.
// -----------------------------------------------------------------------------
message SimilarEventsRequestProto {
  // Идентификатор события, по которому производится поиск похожих событий.
  int32 event_id = 1;

  // Идентификатор пользователя (используется для персонализации).
  int32 user_id = 2;

  // Максимальное количество возвращаемых результатов.
  int32 max_results = 3;
}

// -----------------------------------------------------------------------------
// Запрос для получения количества взаимодействий для списка событий.
// -----------------------------------------------------------------------------
message InteractionsCountRequestProto {
  // Список идентификаторов событий.
  repeated int32 event_ids = 1;
}

// -----------------------------------------------------------------------------
// Описание рекомендуемого события.
// -----------------------------------------------------------------------------
message RecommendedEventProto {
  // Идентификатор события.
  int32 event_id = 1;

  // Оценка (score), определяющая релевантность или приоритет события.
  float score = 2;
}

// -----------------------------------------------------------------------------
// Сервис для работы с рекомендациями.
// -----------------------------------------------------------------------------
service RecommendationsController {
  // Метод для получения рекомендаций для пользователя.
  // Возвращает поток объектов RecommendedEventProto.
  rpc GetRecommendationsForUser(UserPredictionsRequestProto)
      returns (stream RecommendedEventProto);

  // Метод для получения списка событий, похожих на указанное.
  // Возвращает поток объектов RecommendedEventProto.
  rpc GetSimilarEvents(SimilarEventsRequestProto)
      returns (stream RecommendedEventProto);

  // Метод для получения количества взаимодействий для заданных событий.
  // Возвращает поток объектов RecommendedEventProto.
  rpc GetInteractionsCount(InteractionsCountRequestProto)
      returns (stream RecommendedEventProto);
}
